--- a/PA1_template.html
+++ b/PA1_template.html
@@ -241,8 +241,8 @@ ggplot(avgday, aes(interval, steps)) +
 <li>Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?</li>
 </ol>
 <pre class="r"><code># Calculate Max value
-maxavg &lt;- avgday[max(avgday[,2]),]</code></pre>
-<p>The 5-Minute interval which the highest average (56.3) numer of steps is <strong>1705</strong></p>
+maxavg &lt;- avgday[which(avgday[,2]==max(avgday[,2])),]</code></pre>
+<p>The 5-Minute interval which the highest average (206.17) numer of steps is <strong>835</strong></p>
 </div>
 <div id="imputing-missing-values" class="section level2">
 <h2><span style="color:blue">Imputing missing values</span></h2>
